# perty

./: .gitignore  Cargo.toml  README.md  default.env  foo.html
src/: lib.rs  main.rs  perty.rs  perty_cli.rs
src/modules/: activity.rs  activity_report.rs  github.rs  mod.rs  pert.rs  pert_report.rs  roadmap.rs  roadmap_report.rs  storage.rs  view.rs
src/modules/snapshots/: perty__modules__pert_report__test__table.snap  perty__modules__pert_report__test__table_csv.snap  perty__modules__pert_report__test__table_html.snap  perty__modules__view__test__table.snap  perty__modules__view__test__table_csv.snap  perty__modules__view__test__table_html.snap
src/modules/templates/: activities_rows.liquid  report_pert.liquid
src/modules/templates/_includes/: activities_table.liquid
