[package]
name = "perty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
cli-table= "0.4.7"
dotenv = "0.15.0"
insta = "1.14.1"
liquid = "0.26.0"
postgres = "0.19.3"
serde = "1.0.137"
tempfile = "3.3.0"
toiletdb = "0.1.2"
webbrowser = "0.7.1"
